# Tyche

./: CHANGELOG.md  MoneyManager.cabal  Notes.md  Poznamky.txt  README.md  Tyche.cabal  config.ini  test.csv  test2.csv
app/: Arguments.hs  CSVParser.hs  ConfigParser.hs  Date.hs  Errors.hs  Filters.hs  Groups.hs  Main.hs  Money.hs  Requests.hs  Session.hs  Transaction.hs  Utils.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
