cabal-version:      2.4
name:               Tyche
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Jan Pijalek
maintainer:         honza.pijalek@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Tyche
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Arguments
        CSVParser
        Groups
        Transaction
        Filters
        Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base  >= 4.18.0.0,
        split >= 0.2.5,
        text  >= 2.1.1,
        time  >= 1.12.2,
        containers >= 0.6.7
    hs-source-dirs:   app
    default-language: Haskell2010
